# rust-ynab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: budget_variance.rs  create_transaction.rs  create_transactions.rs  debt_account_history.rs  delete_transaction.rs  delta_request.rs  get_category_balance.rs  get_plan_month.rs  list_plans.rs  list_transactions.rs  spending_by_category.rs  split_transaction.rs  trace_demo.rs  update_category_budget.rs  update_transaction.rs  update_transactions.rs
src/: display.rs  lib.rs  main.rs
src/ynab/: account.rs  category.rs  client.rs  common.rs  errors.rs  mod.rs  month.rs  movements.rs  oauth.rs  payee.rs  plan.rs  polars.rs  testutil.rs  transaction.rs  user.rs
tests/: integration.rs
