[package]
name = "rust-ynab"
version = "0.4.4"
edition = "2024"
description = "A Rust client for the YNAB API"
license = "MIT"
repository = "https://github.com/smythg4/rust-ynab"
readme = "README.md"
keywords = ["ynab", "finance", "budget"]
categories = ["api-bindings"]

[features]
integration = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
governor = "0.10.4"
reqwest = { version="0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.149"
wiremock = "0.6.5"