[package]
name = "rust-ynab"
version = "0.4.9"
edition = "2024"
description = "A Rust client for the YNAB API"
license = "MIT"
repository = "https://github.com/smythg4/rust-ynab"
readme = "README.md"
keywords = ["ynab", "finance", "budget"]
categories = ["api-bindings"]

[features]
integration = []
polars = ["dep:polars"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
governor = "0.10.4"
polars = { version = "0.53.0", features = ["lazy"], optional = true }
reqwest = { version="0.13.3", features = ["json", "query"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.149"
wiremock = "0.6.5"
